support_tools/swigwin-3.0.12/Examples/test-suite/errors/c_extra_rbrace.i
%module xxx

int foo(int);

}


