support_tools/swigwin-3.0.12/Examples/test-suite/errors/c_extra_rbrace.stderr
c_extra_rbrace.i:5: Error: Syntax error. Extraneous '}'
